--- a/Rubik.HTML/Rubik.HTML.csproj
+++ b/Rubik.HTML/Rubik.HTML.csproj
@@ -72,6 +72,9 @@
     <Content Include="package.json" />
     <Content Include="Lib\tsconfig.json" />
     <None Include="Scripts\jquery-3.2.1.intellisense.js" />
+    <Content Include="Scripts\Classical\classical.js" />
+    <Content Include="Scripts\Classical\Tutorials\Getting Started.txt" />
+    <Content Include="Scripts\Classical\Tutorials\introduction.html" />
     <Content Include="Scripts\jquery-3.2.1.js" />
     <Content Include="Scripts\jquery-3.2.1.min.js" />
     <Content Include="Scripts\jquery-3.2.1.slim.js" />
@@ -141,16 +144,20 @@
     <TypeScriptCompile Include="Lib\Schema\Member.ts" />
     <TypeScriptCompile Include="Lib\Schema\Schema.ts" />
     <TypeScriptCompile Include="Lib\Schema\SchemaObject.ts" />
-    <TypeScriptCompile Include="Lib\UI\Grid\Cell.ts" />
+    <TypeScriptCompile Include="Lib\UI\Grid\DataManager.ts" />
+    <TypeScriptCompile Include="Lib\UI\Grid\GridCell.ts" />
     <TypeScriptCompile Include="Lib\UI\Grid\Grid.ts" />
     <TypeScriptCompile Include="Lib\UI\Grid\Panel.ts" />
     <TypeScriptCompile Include="Lib\UI\Grid\CellsScrollPanel.ts" />
+    <TypeScriptCompile Include="Lib\UI\Grid\SizeManager.ts" />
     <TypeScriptCompile Include="Lib\UI\IPanel.d.ts" />
     <TypeScriptCompile Include="Lib\UI\ISplitContainer.d.ts" />
     <TypeScriptCompile Include="Lib\UI\ISplitterGrip.d.ts" />
     <Content Include="Lib\UI\SplitContainer.ts" />
     <Content Include="Lib\UI\SplitterGrip.ts" />
     <TypeScriptCompile Include="Lib\UI\SplitterGrip_Orientations.ts" />
+    <TypeScriptCompile Include="Scripts\Classical\classical.d.ts" />
+    <TypeScriptCompile Include="Scripts\Classical\Tutorials\Introduction.ts" />
     <TypeScriptCompile Include="Scripts\typings\html2canvas\html2canvas.d.ts" />
     <TypeScriptCompile Include="Lib\UI\CSSNumber.ts" />
     <TypeScriptCompile Include="Lib\Collections\CollectionModifications.ts" />
