--- a/Rubik.HTML/packages.config
+++ b/Rubik.HTML/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Classical" version="0.3.1" targetFramework="net452" />
   <package id="html2canvas.TypeScript.DefinitelyTyped" version="0.0.9" targetFramework="net452" />
   <package id="jQuery" version="3.2.1" targetFramework="net452" />
   <package id="jquery.TypeScript.DefinitelyTyped" version="3.1.2" targetFramework="net452" />
