--- a/Rubik.HTML/Rubik.HTML.csproj
+++ b/Rubik.HTML/Rubik.HTML.csproj
@@ -144,17 +144,25 @@
     <TypeScriptCompile Include="Lib\Schema\Member.ts" />
     <TypeScriptCompile Include="Lib\Schema\Schema.ts" />
     <TypeScriptCompile Include="Lib\Schema\SchemaObject.ts" />
-    <TypeScriptCompile Include="Lib\UI\Grid\DataManager.ts" />
+    <TypeScriptCompile Include="Lib\Data\PivotDataManager.ts" />
+    <TypeScriptCompile Include="Lib\UI\Button.ts" />
     <TypeScriptCompile Include="Lib\UI\Grid\GridCell.ts" />
     <TypeScriptCompile Include="Lib\UI\Grid\Grid.ts" />
     <TypeScriptCompile Include="Lib\UI\Grid\CellsScrollPanel.ts" />
     <TypeScriptCompile Include="Lib\UI\Grid\SizeManager.ts" />
+    <TypeScriptCompile Include="Lib\UI\IButton.d.ts" />
+    <TypeScriptCompile Include="Lib\UI\ILabel.d.ts" />
+    <TypeScriptCompile Include="Lib\UI\IMultilineTextBox.d.ts" />
     <TypeScriptCompile Include="Lib\UI\IPanel.d.ts" />
     <TypeScriptCompile Include="Lib\UI\ISplitContainer.d.ts" />
     <TypeScriptCompile Include="Lib\UI\ISplitterGrip.d.ts" />
     <Content Include="Lib\UI\SplitContainer.ts" />
     <Content Include="Lib\UI\SplitterGrip.ts" />
+    <Content Include="Lib\UI\MultilineTextBox.ts" />
+    <TypeScriptCompile Include="Lib\UI\ITextBox.d.ts" />
+    <Content Include="Lib\UI\Label.ts" />
     <TypeScriptCompile Include="Lib\UI\SplitterGrip_Orientations.ts" />
+    <Content Include="Lib\UI\TextBox.ts" />
     <TypeScriptCompile Include="Scripts\Classical\classical.d.ts" />
     <TypeScriptCompile Include="Scripts\Classical\Tutorials\Introduction.ts" />
     <TypeScriptCompile Include="Scripts\typings\html2canvas\html2canvas.d.ts" />
