--- a/Rubik.HTML/package.json
+++ b/Rubik.HTML/package.json
@@ -2,8 +2,9 @@
   "version": "1.0.0",
   "name": "asp.net",
   "private": true,
-  "devDependencies": {
-  },
-  "dependencies": {    
+  "devDependencies": {},
+  "dependencies": {
+    "promise-polyfill": "8.1.3",
+    "xmla4js": "0.0.2"
   }
 }
