--- a/Rubik.HTML/tsconfig.json
+++ b/Rubik.HTML/tsconfig.json
@@ -3,8 +3,8 @@
     "noImplicitAny": false,
     "noEmitOnError": true,
     "removeComments": false,
-    "sourceMap": true,
-    "target": "es5",
+    "sourceMap": false,
+    "target": "es5",   
     "outDir": "Build"
   },
   "exclude": [
