--- a/Rubik.HTML/Rubik.HTML.csproj
+++ b/Rubik.HTML/Rubik.HTML.csproj
@@ -607,6 +607,7 @@
     <TypeScriptCompile Include="Lib\DataHub\OlapInfoObjectFactory.ts" />
     <TypeScriptCompile Include="Lib\DataHub\PivotConnection.ts" />
     <TypeScriptCompile Include="Lib\DataHub\PortalConnection.ts" />
+    <TypeScriptCompile Include="Lib\DataHub\sax.d.ts" />
     <TypeScriptCompile Include="Lib\DataHub\Schema\ActionCoordinate.ts" />
     <TypeScriptCompile Include="Lib\DataHub\Schema\CellSet.ts" />
     <TypeScriptCompile Include="Lib\DataHub\Schema\DataAxis.ts" />
@@ -616,7 +617,9 @@
     <TypeScriptCompile Include="Lib\DataHub\xmla.d.ts">
       <SubType>Code</SubType>
     </TypeScriptCompile>
+    <TypeScriptCompile Include="Lib\DataHub\XmlaClient.ts" />
     <TypeScriptCompile Include="Lib\DataHub\XmlaConnection.ts" />
+    <TypeScriptCompile Include="Lib\DataHub\XmlaParser.ts" />
     <TypeScriptCompile Include="Lib\Data\Grid\GridDataRow.ts" />
     <TypeScriptCompile Include="Lib\Data\Grid\GridDataTable.ts" />
     <TypeScriptCompile Include="Lib\Data\Grid\TableDataSource.ts" />
@@ -641,6 +644,7 @@
     <TypeScriptCompile Include="Lib\DataHub\Schema\SelectedMember.ts" />
     <TypeScriptCompile Include="Lib\DataHub\Schema\DimensionInfo.ts" />
     <Content Include="Lib\Externals\polyfill.js" />
+    <Content Include="Lib\Externals\sax.js" />
     <Content Include="Lib\Externals\Xmla.js" />
     <Content Include="package.json" />
     <Content Include="Lib\tsconfig.json" />
@@ -761,6 +765,8 @@
     <TypeScriptCompile Include="Lib\UI\SplitterGrip_Orientations.ts" />
     <Content Include="Lib\UI\TextBox.ts" />
     <Content Include="Lib\UI\StackPanel.ts" />
+    <TypeScriptCompile Include="Lib\Xml\XmlParser.ts" />
+    <TypeScriptCompile Include="Lib\Xml\XsdParser.ts" />
     <TypeScriptCompile Include="Scripts\Classical\classical.d.ts" />
     <TypeScriptCompile Include="Scripts\Classical\Tutorials\Introduction.ts" />
     <TypeScriptCompile Include="Scripts\typings\html2canvas\html2canvas.d.ts" />
