--- a/Rubik.HTML/package.json
+++ b/Rubik.HTML/package.json
@@ -5,6 +5,6 @@
   "devDependencies": {},
   "dependencies": {
     "promise-polyfill": "8.1.3",
-    "xmla4js": "0.0.2"
+    "xml-stream": "^0.4.5"
   }
 }
