--- a/Rubik.HTML/Web.config
+++ b/Rubik.HTML/Web.config
@@ -1,22 +1,43 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
   <appSettings>
-   <add key="vs:EnableBrowserLink" value="false"/>
+   <add key="vs:EnableBrowserLink" value="false" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
+    <identity impersonate="true" />
   </system.web>
 <system.webServer>
+  <validation validateIntegratedModeConfiguration="false" />
+  <security>
+      <requestFiltering>
+        <requestLimits maxAllowedContentLength="2147483648" />
+      </requestFiltering>
+    </security>
+    <staticContent>
+      <remove fileExtension=".ts" />
+      <mimeMap fileExtension="woff" mimeType="application/font-woff" />
+      <mimeMap fileExtension="woff2" mimeType="application/font-woff" />
+      <mimeMap fileExtension=".ts" mimeType="application/x-typescript" />
+    </staticContent>    
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
+        <httpCompression>
+            <dynamicTypes>
+                <add mimeType="application/json" enabled="true" />
+                <add mimeType="application/atom+xml" enabled="true" />
+                <add mimeType="application/atom+xml;charset=utf-8" enabled="true" />
+                <add mimeType="application/json; charset=utf-8" enabled="true" />
+            </dynamicTypes>
+        </httpCompression>
   </system.webServer>
 </configuration>
