--- a/Rubik.HTML/package.json
+++ b/Rubik.HTML/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "devDependencies": {},
   "dependencies": {
-    "promise-polyfill": "8.1.3",
-    "xml-stream": "^0.4.5"
+    "fetch-polyfill": "^0.8.2",
+    "promise-polyfill": "8.1.3"
   }
 }
